fix spacing of close button

--- a/apps/dotcom/client/src/tla/styles/fairy.css
+++ b/apps/dotcom/client/src/tla/styles/fairy.css
@@ -1206,6 +1206,7 @@
 
 .fairy-feed-dialog-header {
 	padding: 12px 16px;
+	padding-right: 0px;
 }
 
 .fairy-feed-dialog-body {
